syntax = "proto3";

option go_package = "github.com/hwebz/go-grpc-guide";
option java_package = "com.github.hwebz.grpc";
option java_multiple_files = true;

import "laptop_message.proto";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
 }